Adds login funcionality && Adds busers listing && Prerares for editing && Avoids forbidden deletions
